/* Changes-1-09.txt */

--- New features -----

video/Point.h
video/Keyboard.h
video/Mouse.h
video/Color.h
video/FrameWindow.h
video/FrameBuf.h
video/Desktop.h
video/ApplicationBase.h
...

  support for the GUI interface programming (ongoing development).

TaskMemStack.h

  per-task memory stack for temporary work space.

gadget/Place.h

  PtrDist() is added.

gadget/SIntFunc.h

  Dist(),MovePos(),MoveNeg(),Move() algorithms are added.

gadget/PtrStepLen.h

  PtrStepLen is added.

gadget/UtilFunc.h

  Sq() is added.

algon/Partition.h

  Partition() is added.

algon/BaseRangeAlgo.h

  The algorithm Reverse() is added.

algon/SimpleRotate.h

  The one element range rotation algorithms are added.

array/TempArray.h

  The method extend() is added.

gadget/UIntFunc.h

  CountZeroMSB() and CountZeroLSB() are added.

gadget/UIntFunc.h

  SqRoot() is added.